bultos y formatos en facturas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12525,7 +12525,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 12
   CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 55, 234, 12
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 68, 40, 12
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 81, 65, 12
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 81, 65, 12
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 95, 65, 12
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 108, 65, 12
   CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 121, 65, 12
@@ -12536,26 +12536,29 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 186, 65, 12
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 199, 65, 12
   CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 218, 65, 12
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 68, 45, 12
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 81, 45, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 95, 45, 12
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 94, 54, 12
   CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 107, 45, 12
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 302, 107, 54, 12
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 30, 12
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 209, 120, 146, 12
   CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 133, 30, 12
   CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 209, 133, 146, 12
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 146, 30, 12
   CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 209, 146, 147, 12
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 177, 159, 69, 12
-  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 160, 23, 12
-  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 123, 69, 63, 10
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 286, 159, 50, 12
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 337, 159, 19, 12
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 286, 172, 50, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 337, 172, 19, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 185, 30, 12
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 209, 185, 88, 12
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 298, 185, 58, 12
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 160, 69, 12
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 173, 50, 12
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 229, 173, 18, 12
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 173, 50, 12
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 173, 19, 12
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 186, 179, 12
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 199, 30, 12
   CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 218, 65, 12
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 209, 199, 88, 12
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 298, 199, 58, 12
+  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 291, 69, 63, 10
+  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 160, 23, 12
   CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 163, 25, 8
   CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 98, 48, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 4, 221, 34, 8
@@ -12563,30 +12566,31 @@ FONT 8, "MS Sans Serif"
   CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 111, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 71, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 123, 98, 51, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 123, 97, 51, 8
   CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 110, 47, 8
   CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 189, 47, 8
   CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
   CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 202, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 253, 162, 19, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 175, 19, 8
   CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 149, 37, 8
-  CONTROL "Alm. / Stock", -1, "Static", WS_GROUP, 123, 188, 45, 8
+  CONTROL "Alm. / Stock", -1, "Static", WS_GROUP, 123, 203, 45, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 214, 354, 1
-  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 4, 84, 34, 8
+  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 71, 34, 8
   CONTROL "Costo", 321, "Static", WS_GROUP, 123, 221, 23, 8
   CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 50, 8
   CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 136, 45, 8
   CONTROL "Portes", 351, "Static", WS_GROUP, 4, 176, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 253, 175, 31, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 175, 31, 8
   CONTROL "", 521, "Static", WS_GROUP, 4, 124, 42, 8
   CONTROL "", 541, "Static", WS_GROUP, 4, 150, 47, 8
   CONTROL "", 531, "Static", WS_GROUP, 4, 137, 42, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 123, 47, 8
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 286, 107, 69, 12
-  CONTROL "Comisión ", -1, "Static", WS_GROUP, 247, 110, 35, 8
+  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 110, 35, 8
   CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 124, 162, 35, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 162, 35, 8
+  CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 84, 48, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 188, 35, 8
 }
 
 LFACCLI_2 DIALOG DISCARDABLE 150, 93, 359, 220
@@ -13577,7 +13581,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 340, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 12
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 55, 42, 65, 12
   CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 55, 55, 65, 12
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 69, 40, 12
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 70, 40, 12
   CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 83, 65, 12
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 96, 65, 12
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 109, 65, 12
@@ -13589,23 +13593,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 174, 65, 12
   CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 187, 65, 12
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 200, 65, 12
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 69, 56, 12
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 70, 56, 12
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 83, 56, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 300, 82, 56, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 96, 56, 12
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 96, 56, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 174, 109, 30, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 205, 109, 151, 12
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 174, 122, 30, 12
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 205, 122, 151, 12
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 174, 135, 30, 12
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 205, 135, 151, 12
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 148, 69, 12
-  CONTROL "", 620, "Edit", WS_BORDER|WS_TABSTOP, 174, 174, 182, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 161, 48, 12
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 224, 161, 19, 12
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 161, 50, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 337, 161, 19, 12
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 96, 56, 12
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 109, 56, 12
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 109, 56, 12
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 174, 122, 30, 12
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 205, 122, 151, 12
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 174, 135, 30, 12
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 205, 135, 151, 12
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 174, 148, 30, 12
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 205, 148, 151, 12
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 161, 69, 12
+  CONTROL "", 620, "Edit", WS_BORDER|WS_TABSTOP, 174, 187, 182, 12
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 174, 48, 12
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 224, 174, 19, 12
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 174, 50, 12
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 337, 174, 19, 12
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 174, 200, 30, 12
   CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 205, 200, 94, 12
   CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 200, 56, 12
@@ -13620,31 +13624,31 @@ FONT 8, "MS Sans Serif"
   CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 112, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 73, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 245, 86, 55, 8
-  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 122, 100, 47, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 122, 99, 51, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 122, 113, 47, 8
   CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 190, 47, 8
   CONTROL "Propiedad 2", 281, "Static", WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", WS_GROUP, 4, 44, 51, 8
   CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 203, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 165, 19, 8
-  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 122, 139, 37, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 178, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 122, 152, 37, 8
   CONTROL "Alm. / Stock", -1, "Static", WS_GROUP, 122, 204, 45, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 215, 354, 1
   CONTROL "Imp. especiales", 126, "Static", WS_GROUP, 122, 73, 52, 8
   CONTROL "Costo", 321, "Static", WS_GROUP, 122, 222, 23, 8
   CONTROL "Nº lote", 113, "Static", WS_GROUP, 4, 18, 50, 8
   CONTROL "Portes", 351, "Static", WS_GROUP, 4, 177, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 245, 165, 31, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 245, 178, 31, 8
   CONTROL "", 521, "Static", WS_GROUP, 4, 125, 42, 8
   CONTROL "", 541, "Static", WS_GROUP, 4, 151, 47, 8
   CONTROL "", 531, "Static", WS_GROUP, 4, 138, 42, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 122, 112, 47, 8
-  CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 100, 33, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 122, 125, 47, 8
+  CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 113, 33, 8
   CONTROL "Caducidad", 341, "Static", WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 152, 35, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 177, 35, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 165, 35, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 190, 35, 8
   CONTROL "Bultos", 611, "Static", WS_GROUP, 4, 87, 48, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 122, 126, 46, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 122, 139, 46, 8
 }
 
 LPEDCLI_2 DIALOG DISCARDABLE 42, 28, 745, 228
