--- a/resource/Gstimage8.rc
+++ b/resource/Gstimage8.rc
@@ -41,8 +41,10 @@ Flower_red_32 BITMAP "..\\bmp\\Flower_red_32.bmp"
 Flower_yellow_32 BITMAP "..\\bmp\\Flower_yellow_32.bmp"
 
 Navigate2_minus_32 BITMAP "..\\bmp\\Navigate2_minus_32.bmp"
+Navigate2_minus_48 BITMAP "..\\bmp\\Navigate2_minus_48.bmp"
 Navigate2_minus_64 BITMAP "..\\bmp\\Navigate2_minus_64.bmp"
 Navigate2_plus_32 BITMAP "..\\bmp\\Navigate2_plus_32.bmp"
+Navigate2_plus_48 BITMAP "..\\bmp\\Navigate2_plus_48.bmp"
 Navigate2_plus_64 BITMAP "..\\bmp\\Navigate2_plus_64.bmp"
 Navigate_panel_32 BITMAP "..\\bmp\\Navigate_panel_32.bmp"
 Navigate_panel_64 BITMAP "..\\bmp\\Navigate_panel_64.bmp"
