--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19236,21 +19236,23 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Menús"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 62, 3, 40, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 274, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 62, 29, 100, 11
-  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 62, 55, 43, 10
-  CONTROL "Menú acompañamiento", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 62, 44, 92, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 78, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 78, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 78, 50, 14
-  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 94, 329, 154
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 73, 3, 40, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 73, 16, 262, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 73, 29, 100, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 73, 42, 40, 11
+  CONTROL "Menú acompañamiento", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 73, 55, 92, 10
+  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 73, 66, 43, 10
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 90, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 90, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 90, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 106, 329, 142
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 235, 257, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 290, 257, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 4, 6, 37, 8
   CONTROL "Precio", -1, "Static", WS_GROUP, 4, 32, 54, 8
-  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 67, 339, 186
+  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 79, 339, 174
+  CONTROL "Nº Unidades Acomp.", 4002, "Static", WS_GROUP, 4, 45, 69, 8
 }
 
 TRABAJADOR DIALOG DISCARDABLE 102, 33, 571, 330
