--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -678,55 +678,46 @@ FONT 8, "MS Sans Serif"
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
-ALMACEN DIALOG DISCARDABLE 147, -21, 569, 330
+ALMACEN DIALOG DISCARDABLE 147, -21, 569, 403
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Almacenes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTabControl32", 0x00000000, 2, 5, 565, 304
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 462, 312, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 517, 312, 50, 14
+  CONTROL "", 100, "SysTabControl32", 0x00000000, 2, 5, 565, 375
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 461, 385, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 516, 385, 50, 14
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-ALMACEN_01 DIALOG DISCARDABLE 29, 33, 558, 289
+ALMACEN_01 DIALOG DISCARDABLE 29, 33, 563, 365
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 112, 42, 120, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 112, 57, 432, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 112, 93, 432, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 112, 108, 80, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 112, 123, 432, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 112, 138, 280, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 112, 153, 280, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 412, 153, 132, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 112, 192, 432, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 112, 229, 105, 12
-  CONTROL "", 191, "Edit", WS_BORDER, 219, 229, 325, 12
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 112, 244, 105, 12
-  CONTROL "", 201, "Edit", WS_BORDER, 219, 244, 325, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 112, 259, 105, 12
-  CONTROL "", 211, "Edit", WS_BORDER, 219, 259, 325, 12
-  CONTROL "Código ", -1, "Static", WS_GROUP, 48, 46, 60, 8
-  CONTROL "Nombre ", -1, "Static", WS_GROUP, 48, 61, 59, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 48, 97, 60, 8
-  CONTROL "Población", -1, "Static", WS_GROUP, 48, 127, 36, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 48, 142, 60, 8
-  CONTROL "Código Postal", -1, "Static", WS_GROUP, 48, 112, 60, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 48, 157, 60, 8
-  CONTROL "Fax", -1, "Static", WS_GROUP, 395, 157, 16, 8
-  CONTROL "Persona contacto", -1, "Static", WS_GROUP, 49, 195, 61, 8
-  CONTROL "Identificación almacén", -1, "Button", BS_GROUPBOX, 44, 30, 508, 47
-  CONTROL "Localización almacén", -1, "Button", BS_GROUPBOX, 44, 82, 508, 93
-  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 44, 180, 508, 34
-  CONTROL "Ubicación", -1, "Button", BS_GROUPBOX, 44, 219, 508, 62
-  CONTROL "Ubicación 1", -1, "Static", WS_GROUP, 48, 233, 60, 8
-  CONTROL "Ubicación 2", -1, "Static", WS_GROUP, 48, 248, 60, 8
-  CONTROL "Ubicación 3", -1, "Static", WS_GROUP, 48, 263, 60, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 112, 42, 120, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 112, 55, 432, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 111, 83, 286, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 111, 96, 286, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 111, 109, 60, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 216, 109, 181, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 441, 83, 102, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 441, 96, 102, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 111, 122, 432, 11
+  CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 112, 151, 431, 199
+  CONTROL "Código ", -1, "Static", WS_GROUP, 48, 45, 29, 8
+  CONTROL "Nombre ", -1, "Static", WS_GROUP, 48, 58, 32, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 48, 86, 33, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 48, 99, 37, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 177, 111, 35, 8
+  CONTROL "Código postal", -1, "Static", WS_GROUP, 48, 112, 49, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 401, 85, 33, 8
+  CONTROL "Fax", -1, "Static", WS_GROUP, 401, 99, 17, 8
+  CONTROL "Persona contacto", -1, "Static", WS_GROUP, 49, 125, 61, 8
+  CONTROL "Identificación almacén", -1, "Button", BS_GROUPBOX, 44, 30, 508, 41
+  CONTROL "Localización almacén", -1, "Button", BS_GROUPBOX, 44, 72, 508, 66
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Añadiendo almacen", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Añadiendo almacen", -1, "Static", WS_GROUP, 44, 3, 507, 8
+  CONTROL "Relación entre almacenes", -1, "Button", BS_GROUPBOX, 43, 140, 508, 213
 }
 
 ALMACEN_02 DIALOG DISCARDABLE 29, 33, 558, 289
@@ -7262,14 +7253,14 @@ FAMILIA_01 DIALOG DISCARDABLE 98, -11, 346, 318
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 58, 12, 80, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 58, 24, 217, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 58, 48, 54, 12
-  CONTROL "", 121, "Edit", WS_BORDER, 114, 48, 161, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 58, 60, 54, 12
-  CONTROL "", 131, "Edit", WS_BORDER, 114, 60, 161, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 58, 72, 54, 12
-  CONTROL "", 141, "Edit", WS_BORDER, 114, 72, 161, 12
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 58, 12, 80, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 58, 24, 217, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 58, 48, 54, 11
+  CONTROL "", 121, "Edit", WS_BORDER, 114, 48, 161, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 58, 60, 54, 11
+  CONTROL "", 131, "Edit", WS_BORDER, 114, 60, 161, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 58, 72, 54, 11
+  CONTROL "", 141, "Edit", WS_BORDER, 114, 72, 161, 11
   CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 8, 101, 267, 207
   CONTROL "", 600, "TBitmap", 0x00800000, 282, 5, 60, 62
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 27, 30, 8
