--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12901,57 +12901,58 @@ FONT 8, "MS Sans Serif"
   CONTROL "TBitmap", 100, "TBitmap", 0x00000000, 387, 2, 80, 167
 }
 
-LFACPRV_1 DIALOG DISCARDABLE 135, 103, 359, 204
+LFACPRV_1 DIALOG DISCARDABLE 135, 103, 361, 204
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 12
-  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 224, 12
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 224, 11
   CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 224, 47
-  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 26, 65, 12
-  CONTROL "", 222, "Edit", WS_BORDER, 132, 26, 224, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 12
-  CONTROL "", 232, "Edit", WS_BORDER, 132, 38, 224, 12
+  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 132, 26, 224, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 132, 38, 224, 11
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 14, 353, 80
-  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 40, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 12
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 12
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 132, 65, 12
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 144, 65, 12
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 156, 65, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 168, 65, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 96, 40, 12
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 40, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 40, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 219, 120, 137, 12
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 132, 40, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 178, 168, 40, 12
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 219, 168, 96, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 12
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 187, 65, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 316, 168, 40, 12
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 290, 187, 65, 12
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 130, 99, 40, 8
+  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 40, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 132, 65, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 144, 65, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 156, 65, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 168, 65, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 96, 40, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 40, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 40, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 219, 120, 137, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 132, 40, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 178, 155, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 249, 155, 106, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 187, 65, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 178, 168, 70, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 290, 187, 65, 11
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 111, 59, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 3, 190, 34, 8
   CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 123, 57, 8
   CONTROL "Precio de compra", -1, "Static", WS_GROUP, 3, 171, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
-  CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 99, 46, 8
+  CONTROL "Tipo de impuesto", -1, "Static", WS_GROUP, 3, 99, 59, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 40, 60, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 28, 60, 8
-  CONTROL "Alm./Stock", -1, "Static", WS_GROUP, 130, 171, 39, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 131, 158, 39, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 183, 356, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 17, 60, 8
-  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 130, 111, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 130, 135, 31, 8
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 131, 135, 31, 8
   CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 238, 190, 49, 8
   CONTROL "Ir a celda", 411, "Static", WS_GROUP, 238, 99, 49, 8
   CONTROL "", 301, "Static", WS_GROUP, 3, 135, 57, 8
   CONTROL "", 311, "Static", WS_GROUP, 3, 147, 57, 8
   CONTROL "", 321, "Static", WS_GROUP, 3, 159, 57, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 130, 123, 47, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 131, 171, 39, 8
 }
 
 LFACPRV_2 DIALOG DISCARDABLE 26, 35, 360, 152
@@ -15645,23 +15646,23 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 43, 296, 140, 74
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 227, 30, 110, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 227, 42, 225, 12
-  CONTROL "", 145, "Edit", WS_BORDER|WS_TABSTOP, 227, 54, 110, 12
-  CONTROL "", 142, "Edit", WS_BORDER|WS_TABSTOP, 227, 66, 225, 12
-  CONTROL "", 143, "Edit", WS_BORDER|WS_TABSTOP, 227, 78, 70, 12
-  CONTROL "", 144, "Edit", WS_BORDER|WS_TABSTOP, 299, 78, 153, 12
-  CONTROL "", 147, "Edit", WS_BORDER|WS_TABSTOP, 227, 90, 110, 12
-  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 377, 90, 75, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 487, 30, 50, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 539, 30, 123, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 487, 42, 50, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 539, 42, 123, 12
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 487, 54, 50, 12
-  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 539, 54, 123, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 487, 66, 50, 12
-  CONTROL "", 171, "TBitMap", 0x00800000, 539, 66, 19, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 560, 66, 101, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 227, 30, 110, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 227, 42, 225, 11
+  CONTROL "", 145, "Edit", WS_BORDER|WS_TABSTOP, 227, 54, 110, 11
+  CONTROL "", 142, "Edit", WS_BORDER|WS_TABSTOP, 227, 66, 225, 11
+  CONTROL "", 143, "Edit", WS_BORDER|WS_TABSTOP, 227, 78, 70, 11
+  CONTROL "", 144, "Edit", WS_BORDER|WS_TABSTOP, 299, 78, 153, 11
+  CONTROL "", 147, "Edit", WS_BORDER|WS_TABSTOP, 227, 90, 110, 11
+  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 377, 90, 75, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 487, 30, 70, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 560, 30, 102, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 487, 42, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 560, 42, 102, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 487, 54, 70, 11
+  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 560, 54, 102, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 487, 66, 70, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 560, 66, 19, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 583, 66, 79, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 106, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 106, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 106, 50, 14
@@ -15669,22 +15670,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 263, 106, 50, 14
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 318, 106, 50, 14
   CONTROL "", 190, "TXBrowse", WS_TABSTOP|0x00300000, 44, 123, 617, 168
-  CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 49, 308, 75, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 308, 42, 12
-  CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 49, 321, 75, 12
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 321, 42, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 49, 334, 75, 12
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 334, 42, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 49, 347, 75, 12
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 347, 42, 12
+  CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 49, 308, 75, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 308, 42, 11
+  CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 49, 321, 75, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 321, 42, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 49, 334, 75, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 334, 42, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 49, 347, 75, 11
+  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 126, 347, 42, 11
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 188, 296, 344, 74
   CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 541, 316, 30, 10
-  CONTROL "", 690, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 30, 25, 12
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 124, 30, 35, 12
-  CONTROL "", 105, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 160, 30, 16, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 42, 78, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 98, 54, 78, 12
-  CONTROL "", 125, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 66, 78, 12
+  CONTROL "", 690, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 30, 25, 11
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 124, 30, 35, 11
+  CONTROL "", 105, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 160, 30, 16, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 42, 78, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 98, 54, 78, 11
+  CONTROL "", 125, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 66, 78, 11
   CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 98, 78, 78, 186
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 49, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 49, 8
