SEPA numeros unicos

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -557,75 +557,69 @@ ALBPRV_1 DIALOG DISCARDABLE 29, 33, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 225, 30, 85, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 225, 43, 210, 12
-  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 56, 85, 12
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 225, 69, 210, 12
-  CONTROL "", 102, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 82, 53, 12
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 280, 82, 155, 12
-  CONTROL "", 107, "Edit", WS_BORDER|WS_TABSTOP, 225, 95, 85, 12
-  CONTROL "", 106, "Edit", WS_BORDER, 345, 95, 90, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 225, 108, 64, 12
-  CONTROL "", 171, "TBitMap", 0x00800000, 291, 109, 19, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 314, 108, 121, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 471, 30, 60, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 533, 30, 130, 12
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 471, 43, 60, 12
-  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 533, 43, 130, 12
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 471, 56, 60, 12
-  CONTROL "", 341, "Edit", WS_BORDER|WS_TABSTOP, 533, 56, 130, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 471, 69, 60, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 533, 69, 130, 12
-  CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 471, 82, 60, 12
-  CONTROL "", 3111, "Edit", WS_BORDER, 533, 82, 130, 12
-  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 471, 95, 60, 12
-  CONTROL "", 3211, "Edit", WS_BORDER, 533, 95, 130, 12
-  CONTROL "", 331, "Edit", WS_BORDER|WS_TABSTOP, 471, 108, 60, 12
-  CONTROL "", 3311, "Edit", WS_BORDER, 533, 108, 130, 12
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 123, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 123, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 123, 50, 14
-  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 123, 50, 14
-  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 265, 123, 50, 14
-  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 320, 123, 50, 14
-  CONTROL "", 190, "TXBrowse", WS_TABSTOP|0x00300000, 44, 140, 619, 150
-  CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 48, 307, 88, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 307, 46, 12
-  CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 48, 320, 88, 12
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 320, 46, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 48, 333, 88, 12
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 333, 46, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 48, 346, 88, 12
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 346, 46, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 227, 30, 110, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 227, 42, 225, 11
+  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 227, 54, 110, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 227, 66, 225, 11
+  CONTROL "", 102, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 227, 78, 53, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 282, 78, 170, 11
+  CONTROL "", 107, "Edit", WS_BORDER|WS_TABSTOP, 227, 90, 99, 11
+  CONTROL "", 106, "Edit", WS_BORDER, 362, 90, 90, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 488, 30, 70, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 560, 30, 102, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 560, 42, 102, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 54, 70, 11
+  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 560, 54, 102, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 488, 66, 70, 11
+  CONTROL "", 341, "Edit", WS_BORDER|WS_TABSTOP, 560, 66, 102, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 488, 78, 70, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 560, 78, 19, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 581, 78, 81, 11
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 105, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 105, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 105, 50, 14
+  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 105, 50, 14
+  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 265, 105, 50, 14
+  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 320, 105, 50, 14
+  CONTROL "", 190, "TXBrowse", WS_TABSTOP|0x00300000, 44, 121, 619, 169
+  CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 48, 307, 88, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 307, 46, 11
+  CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 48, 320, 88, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 320, 46, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 48, 333, 88, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 333, 46, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 48, 346, 88, 11
+  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 346, 46, 11
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 208, 295, 321, 73
   CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 540, 320, 33, 10
-  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 30, 24, 12
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 123, 30, 33, 12
-  CONTROL "", 105, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 158, 30, 17, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 43, 78, 12
-  CONTROL "&G", 558, "Button", WS_TABSTOP, 86, 56, 11, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 97, 56, 78, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 97, 69, 78, 12
-  CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 97, 82, 78, 12
-  CONTROL "", 136, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 95, 78, 12
-  CONTROL "Proveedor", -1, "Static", WS_GROUP, 179, 33, 45, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 439, 73, 31, 8
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 46, 49, 8
+  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 30, 24, 11
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 123, 30, 33, 11
+  CONTROL "", 105, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 158, 30, 17, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 41, 78, 11
+  CONTROL "&G", 558, "Button", WS_TABSTOP, 86, 53, 11, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 97, 53, 78, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 97, 65, 78, 11
+  CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 97, 78, 78, 11
+  CONTROL "", 136, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 90, 78, 11
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 180, 33, 45, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 454, 33, 33, 8
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 44, 49, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 49, 8
-  CONTROL "Pedido", -1, "Static", WS_GROUP, 44, 59, 41, 8
-  CONTROL "Estado", -1, "Static", WS_GROUP, 44, 72, 49, 8
-  CONTROL "Número su alb.", -1, "Static", WS_GROUP, 44, 85, 49, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 179, 46, 45, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 179, 72, 45, 8
-  CONTROL "CP/Población", -1, "Static", WS_GROUP, 179, 85, 45, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 179, 59, 45, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 179, 98, 45, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 439, 33, 31, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 439, 46, 31, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 179, 112, 31, 8
+  CONTROL "Pedido", -1, "Static", WS_GROUP, 44, 56, 41, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 44, 68, 49, 8
+  CONTROL "Número su alb.", -1, "Static", WS_GROUP, 44, 81, 49, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 180, 44, 45, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 180, 68, 45, 8
+  CONTROL "CP/Población", -1, "Static", WS_GROUP, 180, 81, 45, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 180, 56, 45, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 180, 93, 45, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 454, 46, 22, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 454, 58, 19, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 454, 81, 25, 8
   CONTROL "%", 701, "Static", WS_GROUP, 186, 309, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 186, 322, 8, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 314, 98, 30, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 330, 93, 30, 8
   CONTROL "Neto", 705, "Static", WS_GROUP, 540, 297, 33, 8
   CONTROL "Impuestos", 706, "Static", WS_GROUP, 540, 309, 33, 8
   CONTROL "0", 370, "Static", SS_RIGHT|WS_GROUP, 595, 297, 65, 8
@@ -634,46 +628,43 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 420, "Static", WS_GROUP, 540, 353, 33, 16
   CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 595, 353, 65, 16
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 43, 295, 158, 73
-  CONTROL "", 310, "Static", WS_GROUP, 439, 85, 31, 8
-  CONTROL "", 320, "Static", WS_GROUP, 439, 98, 31, 8
-  CONTROL "", 330, "Static", WS_GROUP, 439, 111, 31, 8
   CONTROL "%", 703, "Static", WS_GROUP, 186, 335, 8, 8
   CONTROL "%", 704, "Static", WS_GROUP, 186, 347, 8, 8
-  CONTROL "Fecha su alb.", -1, "Static", WS_GROUP, 44, 98, 49, 8
+  CONTROL "Fecha su alb.", -1, "Static", WS_GROUP, 44, 93, 49, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Origen", 342, "Static", WS_GROUP, 439, 60, 31, 8
+  CONTROL "Origen", 342, "Static", WS_GROUP, 454, 70, 26, 8
 }
 
 ALBPRV_2 DIALOG DISCARDABLE 4, 18, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 300, "Edit", WS_BORDER, 94, 56, 112, 12
-  CONTROL "", 301, "Edit", WS_BORDER, 208, 56, 315, 12
-  CONTROL "", 160, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 93, 80, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 310, 80, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 94, 108, 429, 12
-  CONTROL "", 200, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 123, 429, 184
+  CONTROL "", 300, "Edit", WS_BORDER, 94, 54, 112, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 208, 54, 315, 11
+  CONTROL "", 160, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 93, 80, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 315, 80, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 94, 106, 429, 11
+  CONTROL "", 200, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 119, 429, 193
   CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 50, 349, 44, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 94, 347, 380, 12
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 94, 347, 380, 11
   CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 476, 347, 150, 12
-  CONTROL "Entrada", -1, "Static", WS_GROUP, 50, 97, 42, 8
-  CONTROL "Nº de bultos", -1, "Static", WS_GROUP, 50, 313, 42, 8
-  CONTROL "Expedición", -1, "Static", WS_GROUP, 50, 112, 42, 8
+  CONTROL "Entrada", -1, "Static", WS_GROUP, 50, 96, 42, 8
+  CONTROL "Nº de bultos", -1, "Static", WS_GROUP, 50, 318, 42, 8
+  CONTROL "Expedición", -1, "Static", WS_GROUP, 50, 109, 42, 8
   CONTROL "Envio", -1, "Button", BS_GROUPBOX, 44, 81, 485, 249
   CONTROL "Impresión", -1, "Button", BS_GROUPBOX, 44, 335, 617, 32
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 485, 47
-  CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 60, 42, 8
-  CONTROL "Comentario", -1, "Static", WS_GROUP, 50, 125, 42, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 485, 41
+  CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 57, 42, 8
+  CONTROL "Comentario", -1, "Static", WS_GROUP, 50, 121, 42, 8
   CONTROL "General", 270, "Button", BS_AUTORADIOBUTTON, 543, 45, 60, 10
   CONTROL "Unión Europea", 271, "Button", BS_AUTORADIOBUTTON, 543, 60, 60, 10
   CONTROL "Exento", 272, "Button", BS_AUTORADIOBUTTON, 543, 75, 60, 10
   CONTROL "Exportación", 273, "Button", BS_AUTORADIOBUTTON, 543, 90, 60, 10
   CONTROL "Régimen de imp.", -1, "Button", BS_GROUPBOX, 537, 30, 124, 98
-  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 94, 41, 112, 12
-  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 208, 41, 315, 12
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 45, 42, 8
+  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 94, 41, 112, 11
+  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 208, 41, 315, 11
+  CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 44, 42, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
